--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-# 
-
-####################HELLLLLLLLLLLLLLLLLLLLLLLLLL#
+# Hi team
 <?xml version="2.0" encoding="UTF-8"?>
 <note>
   <to>Tove</to>
+  <version>1.1.1.0</version>
   <from>Jani</from>
   <heading>Reminder</heading>
   <body>Don't forget me this weekend!</body>
