Changes made in TEC-1
Changes made in TEC-1

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
 <note>
   <to>Tove</to>
   <version>111111.0</version>
+    <heading>Reminder New</heading>
   <from>Jani</from>
   <heading>Reminder</heading>
   <body>Don't forget me this weekend!</body>
